feat: agregue la dependencia de mapas y fragment mapa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -11,6 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Inmobiliariamovil" >
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="xxx"
+            />
+
         <activity
             android:name=".inmobiliariaApp.MenuActivity"
             android:exported="false"
